--- a/GreenBowlFoodsSystem/Views/ProductionBatches/Delete.cshtml
+++ b/GreenBowlFoodsSystem/Views/ProductionBatches/Delete.cshtml
@@ -1,69 +1,31 @@
 ﻿@model GreenBowlFoodsSystem.Models.ProductionBatch
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Batch";
 }
 
-<h1>Delete</h1>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <div class="text-center mb-4 animate-fade-up">
+            <h1 class="display-6 fw-bold text-danger">Cancel Batch?</h1>
+            <p class="text-white">Are you sure you want to delete this production? This action cannot be undone..</p>
+        </div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ProductionBatch</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BatchNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BatchNumber)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductionDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductionDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FinishedProduct)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FinishedProduct.ProductName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Supervisor)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Supervisor.Password)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TargetQuantity)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TargetQuantity)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.QuantityProduced)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.QuantityProduced)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DowntimeMinutes)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DowntimeMinutes)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+        <div class="card shadow-lg animate-fade-up" style="animation-delay: 0.1s; border: 1px solid rgba(220, 38, 38, 0.3);">
+            <div class="card-body p-5 text-center">
+                <h3 class="text-white mb-2">@Model.BatchNumber</h3>
+                <h5 class="text-info">@Model.FinishedProduct!.ProductName</h5>
+
+                <form asp-action="Delete">
+                    <input type="hidden" asp-for="Id" />
+                    <div class="d-grid gap-2 mt-4">
+                        <button type="submit" class="btn btn-lg text-white" style="background-color: #dc3545; border-radius: 50px;">
+                            <i class="bi bi-trash-fill me-2"></i> Confirm Delete
+                        </button>
+                        <a asp-action="Index" class="btn btn-back-custom text-center justify-content-center mt-2">Cancel</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
