--- a/GreenBowlFoodsSystem/Views/Shared/_Layout.cshtml
+++ b/GreenBowlFoodsSystem/Views/Shared/_Layout.cshtml
@@ -73,8 +73,16 @@
                             <li class="nav-item"><span class="nav-link text-white-50 small fw-bold d-xl-none mt-2">FUTURE OPS</span></li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="ProductionBatches"><i class="bi bi-fire me-2"></i> Production</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="ProductionBatches" asp-action="Index">
+                                    <i class="bi bi-bag-heart-fill me-2"></i> Production
+                                </a>
                             </li>
+
+                           @*  <li class="nav-item">
+                                <a class="nav-link text-white" asp-controll="ProductionBatches" asp-action="Index">
+                                    <i class="bi bi-fire me-2"></i> Production</a>
+                            </li> *@
+
                             <li class="nav-item">
                                 <a class="nav-link text-white opacity-50" href="#"><i class="bi bi-airplane-engines-fill me-2"></i> Shipping</a>
                             </li>
