Update Shipment Model

--- a/GreenBowlFoodsSystem/Views/Shared/_Layout.cshtml
+++ b/GreenBowlFoodsSystem/Views/Shared/_Layout.cshtml
@@ -74,14 +74,10 @@
 
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-area="" asp-controller="ProductionBatches" asp-action="Index">
-                                    <i class="bi bi-bag-heart-fill me-2"></i> Production
+                                    <i class="bi bi-fire me-2"></i> Production
                                 </a>
                             </li>
-
-                           @*  <li class="nav-item">
-                                <a class="nav-link text-white" asp-controll="ProductionBatches" asp-action="Index">
-                                    <i class="bi bi-fire me-2"></i> Production</a>
-                            </li> *@
+                                                    
 
                             <li class="nav-item">
                                 <a class="nav-link text-white opacity-50" href="#"><i class="bi bi-airplane-engines-fill me-2"></i> Shipping</a>
