--- a/GreenBowlFoodsSystem/Views/Shared/_Layout.cshtml
+++ b/GreenBowlFoodsSystem/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
                                                     
 
                             <li class="nav-item">
-                                <a class="nav-link text-white opacity-50" href="#"><i class="bi bi-airplane-engines-fill me-2"></i> Shipping</a>
+                                <a class="nav-link text-white" asp-controller="Shipments" asp-action="Index"><i class="bi bi-airplane-engines-fill me-2"></i> Shipping</a>
                             </li>
                         }
                     </ul>
