feat(shipments): complete module with inventory logic, unified UI design, and details view

--- a/GreenBowlFoodsSystem/Views/Shipments/Index.cshtml
+++ b/GreenBowlFoodsSystem/Views/Shipments/Index.cshtml
@@ -52,7 +52,7 @@
                                     <td>
                                         <div class="d-flex align-items-center">
                                             <div class="rounded-circle bg-dark border border-secondary d-flex justify-content-center align-items-center me-3" style="width:35px; height:35px;">
-                                                <i class="bi bi-truck text-info fs-5"></i>
+                                            <i class="bi bi-buildings text-info mb-2 fs-5"></i>
                                             </div>
                                             <div>
                                                 
