--- a/GreenBowlFoodsSystem/Views/Shipments/Edit.cshtml
+++ b/GreenBowlFoodsSystem/Views/Shipments/Edit.cshtml
@@ -48,7 +48,7 @@
                     <div class="mb-3">
                         <label asp-for="CustomerId" class="form-label text-white small fw-bold">Customer / Destination</label>
                         <div class="input-group">
-                            <span class="input-group-text"><i class="bi bi-building"></i></span>
+                            <span class="input-group-text"> <i class="bi bi-buildings"></i>  </i></span>
                             <select asp-for="CustomerId" class="form-control" asp-items="ViewBag.CustomerId"></select>
                         </div>
                     </div>
